qt6-base (6.3.1+dfsg-1) UNRELEASED; urgency=medium

  [ Pino Toscano ]
  * Update symbols files from the logs of buildds.

  [ Patrick Franz ]
  * New upstream release (6.3.1).
  * Update ABI to 6.3.1.
  * Remove upstream_Explicitly-check-for-atomic-addition.patch and
    upstream_Hardcode-atomic_LIB-as-latomic.patch as they have been
    applied upstream.

 -- Debian Qt/KDE Maintainers <debian-qt-kde@lists.debian.org>  Fri, 15 Jul 2022 19:20:09 +0200

qt6-base (6.3.0+dfsg-2) experimental; urgency=medium

  [ Patrick Franz ]
  * Update symbols from buildlogs.

 -- Patrick Franz <deltaone@debian.org>  Tue, 24 May 2022 08:48:38 +0200

qt6-base (6.3.0+dfsg-1) experimental; urgency=medium

  [ Patrick Franz ]
  * New upstream release (6.3.0).
  * Update ABI to 6.3.0.
  * Remove upstream_QStorageInfo-limit-Linux-only-code-with-
    Q_OS_LINUX.patch as it has been applied upstream.
  * Update list of installed files.
  * Update symbols from buildlogs.
  * Update d/copyright.
  * Update lintian-overrides.

 -- Patrick Franz <deltaone@debian.org>  Mon, 23 May 2022 20:12:56 +0200

qt6-base (6.2.4+dfsg-9) unstable; urgency=medium

  * Team upload.

  [ Pino Toscano ]
  * Update symbols files from the logs of buildds.
  * Make libqt6core6 depend on shared-mime-info: QtCore is built without an
    embedded freedesktop MIME type database, so the system one is needed to
    make the QMimeType APIs work; this matches what was done in
    qtbase-opensource-src 5.14.1+dfsg-1.
  * Make libqt6core6 recommend qt6-translations-l10n; this matches what was
    done in qtbase-opensource-src 5.3.1+dfsg-5.

  [ Lisandro Damián Nicanor Pérez Meyer ]
  * Remove dependencies upon qtchooser, we don't need them in Qt 6.

 -- Lisandro Damián Nicanor Pérez Meyer <lisandro@debian.org>  Wed, 06 Jul 2022 16:33:21 -0300

qt6-base (6.2.4+dfsg-8) unstable; urgency=medium

  * Team upload.
  * Disable relocatable feature, to fix paths on usr-merged systems.